force-app/main/default/objects/Case/fields/Ack_Sent__c.field-meta.xml
<CustomField>
    <fullName>Ack_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ack Sent</label>
    <type>Checkbox</type>
</CustomField>