force-app/main/default/objects/Case/fields/Addressee__c.field-meta.xml
<CustomField>
    <fullName>Addressee__c</fullName>
    <label>Addressee</label>
    <length>250</length>
    <type>Text</type>
</CustomField>