force-app/main/default/objects/Case/fields/Adjusted_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Due_Date__c</fullName>
    <label>Adjusted Due Date</label>
    <type>DateTime</type>
</CustomField>