force-app/main/default/objects/Case/fields/Appeal_Category__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Category__c</fullName>
    <label>Appeal Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Experimental/Investigational</fullName>
            </value>
            <value>
                <fullName>Substance Use Disorder</fullName>
            </value>
            <value>
                <fullName>Medical/Surgical</fullName>
            </value>
            <value>
                <fullName>Mental/Behavioral Health</fullName>
            </value>
            <value>
                <fullName>Opt 1</fullName>
                <isActive>false</isActive>
                <label>Opt 1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>