force-app/main/default/objects/Case/fields/Appeal_Officer__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appeal Officer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>