force-app/main/default/objects/Case/fields/Appeal_Type__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Type__c</fullName>
    <label>Appeal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Medicaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>