force-app/main/default/objects/Case/fields/Assigned_RN__c.field-meta.xml
<CustomField>
    <fullName>Assigned_RN__c</fullName>
    <formula>IF( ISBLANK( Appeal_Officer__r.MiddleName), Appeal_Officer__r.FirstName + &apos; &apos; +  Appeal_Officer__r.LastName , Appeal_Officer__r.FirstName + &apos; &apos; +  Appeal_Officer__r.MiddleName  +  &apos; &apos; +Appeal_Officer__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned RN</label>
    <type>Text</type>
</CustomField>