force-app/main/default/objects/Case/fields/Assigned_to_Reviewer_Date__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Reviewer_Date__c</fullName>
    <label>Assigned to Reviewer Date</label>
    <type>Date</type>
</CustomField>