force-app/main/default/objects/Case/fields/Associate_Consultant_Hours__c.field-meta.xml
<CustomField>
    <fullName>Associate_Consultant_Hours__c</fullName>
    <label>Associate Consultant Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>