force-app/main/default/objects/Case/fields/Associate_Consultant_Hours_Comment__c.field-meta.xml
<CustomField>
    <fullName>Associate_Consultant_Hours_Comment__c</fullName>
    <label>Associate Consultant Hours Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>