force-app/main/default/objects/Case/fields/Associate_Consultant_Rate__c.field-meta.xml
<CustomField>
    <fullName>Associate_Consultant_Rate__c</fullName>
    <label>Associate Consultant Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>