force-app/main/default/objects/Case/fields/Associate_Consultant_Total__c.field-meta.xml
<CustomField>
    <fullName>Associate_Consultant_Total__c</fullName>
    <formula>IF(ISNULL( Associate_Consultant_Hours__c ) ,  Associate_Consultant_Rate__c , Associate_Consultant_Hours__c  *  Associate_Consultant_Rate__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Associate Consultant Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>