force-app/main/default/objects/Case/fields/Attorney_Hours__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Hours__c</fullName>
    <label>Attorney Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>