force-app/main/default/objects/Case/fields/Attorney_Hours_Comment__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Hours_Comment__c</fullName>
    <label>Attorney Hours Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>