force-app/main/default/objects/Case/fields/Attorney_Rate__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Rate__c</fullName>
    <label>Attorney Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>