force-app/main/default/objects/Case/fields/Attorney_Total__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Total__c</fullName>
    <formula>IF(ISNULL( Attorney_Hours__c ) ,   Attorney_Rate__c  , Attorney_Hours__c  *  Attorney_Rate__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attorney Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>