force-app/main/default/objects/Case/fields/Billing_Enrollee_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Enrollee_Address__c</fullName>
    <label>Billing Enrollee Address</label>
    <type>TextArea</type>
</CustomField>