force-app/main/default/objects/Case/fields/Billing_Enrollee_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Enrollee_Contact_Name__c</fullName>
    <label>Billing Enrollee Contact Name</label>
    <length>105</length>
    <type>Text</type>
</CustomField>