force-app/main/default/objects/Case/fields/Billing_Entity_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Entity_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Entity Address</label>
    <referenceTo>Entity_Address__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>