force-app/main/default/objects/Case/fields/Billing_Entity_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Entity_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Entity Contact</label>
    <referenceTo>Entity_Contact__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>