force-app/main/default/objects/Case/fields/Billing_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Entity_Name__c</fullName>
    <label>Billing Entity Name</label>
    <type>TextArea</type>
</CustomField>