force-app/main/default/objects/Case/fields/Case_Decision__c.field-meta.xml
<CustomField>
    <fullName>Case_Decision__c</fullName>
    <label>Case Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Decision Reversed</fullName>
            </value>
            <value>
                <fullName>Decision corrected but prior decision stands</fullName>
            </value>
            <value>
                <fullName>Decision stands - no correction</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Awarded to Initiating Party</fullName>
            </value>
            <value>
                <fullName>Awarded to Responding Party</fullName>
            </value>
            <value>
                <fullName>Awarded to Initiating Party (Default)</fullName>
            </value>
            <value>
                <fullName>Awarded to Responding Party (Default)</fullName>
            </value>
            <value>
                <fullName>Dismiss</fullName>
            </value>
            <value>
                <fullName>Ineligible</fullName>
            </value>
            <value>
                <fullName>Mediation Completed – No agreement</fullName>
            </value>
            <value>
                <fullName>Mediation Completed – Agreement reached</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>