force-app/main/default/objects/Case/fields/Case_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Decision_Date__c</fullName>
    <label>Case Decision Date</label>
    <type>Date</type>
</CustomField>