force-app/main/default/objects/Case/fields/Case_Narrative__c.field-meta.xml
<CustomField>
    <fullName>Case_Narrative__c</fullName>
    <label>Case Narrative</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>