force-app/main/default/objects/Case/fields/Case_Number_f__c.field-meta.xml
<CustomField>
    <fullName>Case_Number_f__c</fullName>
    <formula>IF(ISBLANK(Case_Sequence_Number__c),HYPERLINK(&quot;/&quot; &amp; Id,Program_Code__c + RIGHT(TEXT(YEAR( DATEVALUE(CreatedDate) )), 2) + &apos;-&apos; + Case_Sequence__c , &quot;_self&quot;),HYPERLINK(&quot;/&quot; &amp; Id, Case_Sequence_Number__c , &quot;_self&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Number</label>
    <type>Text</type>
</CustomField>