force-app/main/default/objects/Case/fields/Case_Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Sequence_Number__c</fullName>
    <label>Case Sequence Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>