force-app/main/default/objects/Case/fields/Citation_Note__c.field-meta.xml
<CustomField>
    <fullName>Citation_Note__c</fullName>
    <label>Citation Note</label>
    <length>25000</length>
    <type>LongTextArea</type>
</CustomField>