force-app/main/default/objects/Case/fields/Citations__c.field-meta.xml
<CustomField>
    <fullName>Citations__c</fullName>
    <label>Citations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>