force-app/main/default/objects/Case/fields/Clock_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Clock_Start_Date__c</fullName>
    <label>Clock Start Date</label>
    <type>DateTime</type>
</CustomField>