force-app/main/default/objects/Case/fields/Created_Date_MDIRO__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_MDIRO__c</fullName>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>