force-app/main/default/objects/Case/fields/Date_Additional_Information_Requested__c.field-meta.xml
<CustomField>
    <fullName>Date_Additional_Information_Requested__c</fullName>
    <inlineHelpText>The field applies to PA Project</inlineHelpText>
    <label>Date Additional Information Requested</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>