force-app/main/default/objects/Case/fields/Date_Draft_Letter_For_Edit__c.field-meta.xml
<CustomField>
    <fullName>Date_Draft_Letter_For_Edit__c</fullName>
    <label>Date Draft Letter For Edit</label>
    <type>Date</type>
</CustomField>