force-app/main/default/objects/Case/fields/Date_Edit_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_Edit_Completed__c</fullName>
    <label>Date Edit Completed</label>
    <type>Date</type>
</CustomField>