force-app/main/default/objects/Case/fields/Date_Information_Received_from_the_Carri__c.field-meta.xml
<CustomField>
    <fullName>Date_Information_Received_from_the_Carri__c</fullName>
    <inlineHelpText>The field applies to PA Project</inlineHelpText>
    <label>Date Information Received from Carrier</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>