force-app/main/default/objects/Case/fields/Date_Initial_Appeal_Filed__c.field-meta.xml
<CustomField>
    <fullName>Date_Initial_Appeal_Filed__c</fullName>
    <label>Date Initial Appeal Filed</label>
    <type>Date</type>
</CustomField>