force-app/main/default/objects/Case/fields/Date_Initial_Claim_Denial_MDIRO__c.field-meta.xml
<CustomField>
    <fullName>Date_Initial_Claim_Denial_MDIRO__c</fullName>
    <label>Date Initial Claim Denial</label>
    <type>Date</type>
</CustomField>