force-app/main/default/objects/Case/fields/Date_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Letter_Sent__c</fullName>
    <label>Date Letter Sent</label>
    <type>Date</type>
</CustomField>