force-app/main/default/objects/Case/fields/Date_of_Service_Start__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Service_Start__c</fullName>
    <inlineHelpText>Format must be date, date, date. &quot;Example: 03/21/2021, 05/22/2021..&quot;</inlineHelpText>
    <label>Date of Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>