force-app/main/default/objects/Case/fields/Date_QA_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_QA_Completed__c</fullName>
    <label>Date QA Completed</label>
    <type>Date</type>
</CustomField>