force-app/main/default/objects/Case/fields/Date_s_Documents_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_s_Documents_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Date(s) Documents Received</label>
    <type>Checkbox</type>
</CustomField>