force-app/main/default/objects/Case/fields/Dates_s_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Dates_s_of_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dates(s) of Service</label>
    <type>Checkbox</type>
</CustomField>