force-app/main/default/objects/Case/fields/Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Decision_Date__c</fullName>
    <inlineHelpText>This field applies to IA, VT and NC projects only.</inlineHelpText>
    <label>Date Draft Decision Sent to Client</label>
    <type>Date</type>
</CustomField>