force-app/main/default/objects/Case/fields/Decision_Date_Closing__c.field-meta.xml
<CustomField>
    <fullName>Decision_Date_Closing__c</fullName>
    <label>Decision Date</label>
    <type>Date</type>
</CustomField>