force-app/main/default/objects/Case/fields/Decision_Letter_Recipients_and_Notes__c.field-meta.xml
<CustomField>
    <fullName>Decision_Letter_Recipients_and_Notes__c</fullName>
    <label>Decision Letter Recipients and Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>