force-app/main/default/objects/Case/fields/Decision_Letter_Sample_ID__c.field-meta.xml
<CustomField>
    <fullName>Decision_Letter_Sample_ID__c</fullName>
    <formula>Reference_Data__r.SDoc_Template__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Decision Letter Sample ID</label>
    <type>Text</type>
</CustomField>