force-app/main/default/objects/Case/fields/Decision_Letter_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Decision_Letter_Template_ID__c</fullName>
    <formula>Decision_Letter_Template__r.SDoc_Template__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Decision Letter Template ID</label>
    <type>Text</type>
</CustomField>