force-app/main/default/objects/Case/fields/Decision_QC__c.field-meta.xml
<CustomField>
    <fullName>Decision_QC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decision</label>
    <type>Checkbox</type>
</CustomField>