force-app/main/default/objects/Case/fields/Decision_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decision_Reason__c</fullName>
    <label>Decision Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Uphold</fullName>
            </value>
            <value>
                <fullName>Overturn</fullName>
            </value>
            <value>
                <fullName>Partial Overturn</fullName>
            </value>
            <value>
                <fullName>Internal Appeal Not Exhausted</fullName>
            </value>
            <value>
                <fullName>Claim Processing Dispute</fullName>
            </value>
            <value>
                <fullName>Untimely Request</fullName>
            </value>
            <value>
                <fullName>Plan Not Elected into FERP</fullName>
            </value>
            <value>
                <fullName>Incomplete Request</fullName>
            </value>
            <value>
                <fullName>Plan Approval</fullName>
            </value>
            <value>
                <fullName>NSA- Ineligible</fullName>
            </value>
            <value>
                <fullName>NSA-Claim Processing</fullName>
            </value>
            <value>
                <fullName>NSA-Balance Billing</fullName>
            </value>
            <value>
                <fullName>NSA-Uphold</fullName>
            </value>
            <value>
                <fullName>NSA- Overturn</fullName>
            </value>
            <value>
                <fullName>NSA- Partial Overturn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>