force-app/main/default/objects/Case/fields/Decision_Review__c.field-meta.xml
<CustomField>
    <fullName>Decision_Review__c</fullName>
    <label>Decision (Review)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>