force-app/main/default/objects/Case/fields/DecisionSummary__c.field-meta.xml
<CustomField>
    <fullName>DecisionSummary__c</fullName>
    <label>Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>