force-app/main/default/objects/Case/fields/Denial_Reason__c.field-meta.xml
<CustomField>
    <fullName>Denial_Reason__c</fullName>
    <label>Denial Reason</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>