force-app/main/default/objects/Case/fields/Determination_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Determination_Due_Date__c</fullName>
    <formula>IF( ISNULL( DATEVALUE(Adjusted_Due_Date__c) ) , DATEVALUE( Original_Due_Date_f__c ) , DATEVALUE(Adjusted_Due_Date__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>