force-app/main/default/objects/Case/fields/Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis__c</fullName>
    <label>Diagnosis</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>