force-app/main/default/objects/Case/fields/Dispute_Details__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Details__c</fullName>
    <label>Dispute Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>