force-app/main/default/objects/Case/fields/DL_Sample_Letter_ID__c.field-meta.xml
<CustomField>
    <fullName>DL_Sample_Letter_ID__c</fullName>
    <formula>IF(  Decision_Letter_Sample_ID__c   = null &amp;&amp; ( Account.Program_Code__c) = &quot;MA&quot;, 
&quot;MA Medical Necessity Decision Letter Sample,MA Continuation of Coverage Decision Letter Sample&quot;,  Decision_Letter_Sample_ID__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DL Sample Letter ID</label>
    <type>Text</type>
</CustomField>