force-app/main/default/objects/Case/fields/DL_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>DL_Template_ID__c</fullName>
    <formula>IF( Decision_Letter_Template_ID__c  = null &amp;&amp; ( Account.Program_Code__c) = &quot;MA&quot;, 
&quot;MA Medical Necessity Decision Letter,MA Continuation of Coverage Decision Letter&quot;, Decision_Letter_Template_ID__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DL Template ID</label>
    <type>Text</type>
</CustomField>