force-app/main/default/objects/Case/fields/Doc_Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Doc_Member_Name__c</fullName>
    <label>Member Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>