force-app/main/default/objects/Case/fields/Document_Address__c.field-meta.xml
<CustomField>
    <fullName>Document_Address__c</fullName>
    <label>Document Address</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>