force-app/main/default/objects/Case/fields/Document_Address_line_1__c.field-meta.xml
<CustomField>
    <fullName>Document_Address_line_1__c</fullName>
    <label>Document Address line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>