force-app/main/default/objects/Case/fields/Document_Address_line_3__c.field-meta.xml
<CustomField>
    <fullName>Document_Address_line_3__c</fullName>
    <label>Document Address line 3</label>
    <length>150</length>
    <type>Text</type>
</CustomField>