force-app/main/default/objects/Case/fields/Document_Addressee__c.field-meta.xml
<CustomField>
    <fullName>Document_Addressee__c</fullName>
    <label>Document Addressee</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>