force-app/main/default/objects/Case/fields/Document_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Document_Case_Number__c</fullName>
    <formula>Program_Code__c + RIGHT(TEXT(YEAR(TODAY())), 2) + &apos;-&apos; + Case_Sequence__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Case Number</label>
    <type>Text</type>
</CustomField>