force-app/main/default/objects/Case/fields/Document_DatesOfService__c.field-meta.xml
<CustomField>
    <fullName>Document_DatesOfService__c</fullName>
    <formula>IF( Is_this_a_pre_service__c ,  IF( CONTAINS( Program_Priority__r.Name , &apos;Expedited&apos;) , &apos;Expedited Pre-service&apos;, &apos;Pre-service&apos;) ,  Date_of_Service_Start__c )</formula>
    <label>Document DatesOfService</label>
    <type>Text</type>
</CustomField>