force-app/main/default/objects/Case/fields/Document_Decision__c.field-meta.xml
<CustomField>
    <fullName>Document_Decision__c</fullName>
    <formula>CASE( TEXT( Decision_Code__c ) , 
&apos;Uphold&apos;, &apos;Upheld&apos;, 
&apos;Overturn&apos;, &apos;Reversed&apos;,
&apos;Partial Overturn&apos;, &apos;Revised&apos;,
&apos;&apos;)</formula>
    <label>Document Decision</label>
    <type>Text</type>
</CustomField>