force-app/main/default/objects/Case/fields/Document_Enrollee_Initials__c.field-meta.xml
<CustomField>
    <fullName>Document_Enrollee_Initials__c</fullName>
    <formula>LEFT( Doc_Member_Name__c , 1) + LEFT(RIGHT(Doc_Member_Name__c, LEN(Doc_Member_Name__c) - FIND(&quot; &quot;, Doc_Member_Name__c)), 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Enrollee Initials</label>
    <type>Text</type>
</CustomField>