force-app/main/default/objects/Case/fields/Document_Status__c.field-meta.xml
<CustomField>
    <fullName>Document_Status__c</fullName>
    <label>Document Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>