force-app/main/default/objects/Case/fields/Does_the_request_have_a_due_date__c.field-meta.xml
<CustomField>
    <fullName>Does_the_request_have_a_due_date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Does the request have a due date?</label>
    <type>Checkbox</type>
</CustomField>