force-app/main/default/objects/Case/fields/Due_Datss__c.field-meta.xml
<CustomField>
    <fullName>Due_Datss__c</fullName>
    <formula>if(NOT( ISBLANK(DateValue(Adjusted_Due_Date__c) ) ),DateValue(Adjusted_Due_Date__c) ,DateValue( Original_Due_Date_f__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>