force-app/main/default/objects/Case/fields/Eligibility_Review__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Review__c</fullName>
    <label>Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>