force-app/main/default/objects/Case/fields/Eligibility_Review_Started__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Review_Started__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Review Started</label>
    <type>Checkbox</type>
</CustomField>