force-app/main/default/objects/Case/fields/Eligible_for_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Review_Date__c</fullName>
    <label>Eligible for Review Date</label>
    <type>Date</type>
</CustomField>