force-app/main/default/objects/Case/fields/End_DOS__c.field-meta.xml
<CustomField>
    <fullName>End_DOS__c</fullName>
    <label>End DOS</label>
    <type>Date</type>
</CustomField>