force-app/main/default/objects/Case/fields/Enrollee_Name__c.field-meta.xml
<CustomField>
    <fullName>Enrollee_Name__c</fullName>
    <label>Enrollee Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>