force-app/main/default/objects/Case/fields/Enrollee_Type__c.field-meta.xml
<CustomField>
    <fullName>Enrollee_Type__c</fullName>
    <label>Enrollee Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>