force-app/main/default/objects/Case/fields/Expected_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Decision_Date__c</fullName>
    <label>Expected Decision Date</label>
    <type>Date</type>
</CustomField>