force-app/main/default/objects/Case/fields/Expedite_Reason__c.field-meta.xml
<CustomField>
    <fullName>Expedite_Reason__c</fullName>
    <description>Label changed for FERP</description>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>