force-app/main/default/objects/Case/fields/Expert_Review__c.field-meta.xml
<CustomField>
    <fullName>Expert_Review__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expert Review</label>
    <referenceTo>Expert_Review__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>