force-app/main/default/objects/Case/fields/Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fee_Amount__c</fullName>
    <label>Billing Fee</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>