force-app/main/default/objects/Case/fields/FERP_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>FERP_Case_Number__c</fullName>
    <externalId>true</externalId>
    <label>Case Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>