force-app/main/default/objects/Case/fields/Final_Denial_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Denial_Date__c</fullName>
    <label>Final Denial Date</label>
    <type>Date</type>
</CustomField>