force-app/main/default/objects/Case/fields/Health_Plan_Rules__c.field-meta.xml
<CustomField>
    <fullName>Health_Plan_Rules__c</fullName>
    <label>Health Plan Denial  Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>