force-app/main/default/objects/Case/fields/ID_Number__c.field-meta.xml
<CustomField>
    <fullName>ID_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ID Number</label>
    <type>Checkbox</type>
</CustomField>